--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <p class="c9"><span class="c1"></span></p>
       <p class="c3"><span class="c1">Please RSVP by September 16. &nbsp;You can RSVP at this link if you prefer to RSVP online instead of by mail: &nbsp;</span><span class="c2"><a class="c0" href="https://forms.gle/StcLdKQCe2Rvz9gu8">https://forms.gle/StcLdKQCe2Rvz9gu8</a></span><span class="c1">. &nbsp;</span></p>
       <p class="c9"><span class="c1"></span></p>
+	         <p class="c9"><span class="c1"></span></p>
+         <h3 class="c4 li-bullet-0"><span class="c7">When are the wedding events?</span></h2>
+      <p class="c9"><span class="c1"></span></p>
+      <p class="c3"><span class="c1">On Saturday evening (October 15), the wedding reception at Toolbox will begin at 6 p.m.  On Sunday morning (October 16), the picnic in Rock Creek Park will begin at 11 a.m.</p>
+      <p class="c9"><span class="c1"></span></p>
          <h3 class="c4 li-bullet-0"><span class="c8 c7">What should we wear?</span></h3>
       <p class="c9 c11"><span class="c8 c7"></span></p>
       <p class="c10"><span class="c1">Amanda and Bj&ouml;rn would be honored if you wore your most comfortable shoes to their wedding! &nbsp;There is no dress code, so please wear whatever makes you feel happiest. &nbsp;If you&rsquo;re looking for inspiration, we&rsquo;d vote for bright colors!</span></p>
