--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	         <p class="c9"><span class="c1"></span></p>
          <h3 class="c4 li-bullet-0"><span class="c7">When are the wedding events?</span></h2>
       <p class="c9"><span class="c1"></span></p>
-      <p class="c3"><span class="c1">On Saturday evening (October 15), the wedding reception at Toolbox will begin at 6 p.m.  On Sunday morning (October 16), the picnic in Rock Creek Park will begin at 11 a.m.</p>
+      <p class="c3"><span class="c1">On Saturday evening (October 15), the wedding reception at Toolbox (1627 Connecticut Ave. NW, Washington, DC) will begin at 6 p.m.  On Sunday morning (October 16), the picnic in Rock Creek Park (at Picnic Grove 1) will begin at 11 a.m.</p>
       <p class="c9"><span class="c1"></span></p>
          <h3 class="c4 li-bullet-0"><span class="c8 c7">What should we wear?</span></h3>
       <p class="c9 c11"><span class="c8 c7"></span></p>
@@ -48,7 +48,7 @@
       <p class="c3 c12"><span class="c1"></span></p>
          <h3 class="c4 li-bullet-0"><span class="c8 c7">Where is the picnic on Sunday?</span></h3>
       <p class="c9 c11"><span class="c8 c7"></span></p>
-      <p class="c10"><span>The picnic will be taking place in </span><span class="c2"><a class="c0" href="https://www.nps.gov/places/000/rock-creek-park-picnic-grove-1.htm&amp;sa=D&amp;source=editors&amp;ust=1661816527787750&amp;usg=AOvVaw1RYkRVxnASzKXMi3KIADwd">Picnic Grove 1 in Rock Creek Park</a></span><span class="c1">. &nbsp;There is a parking lot immediately adjacent to that picnic area, though walking and biking to Rock Creek Park are also good options. &nbsp;If you type Picnic Grove #1 into your GPS, you should be able to get directions to the parking lot. &nbsp;There are restrooms at the picnic area. &nbsp;</span></p>
+      <p class="c10"><span>The picnic will be taking place in </span><span class="c2"><a class="c0" href="https://www.nps.gov/places/000/rock-creek-park-picnic-grove-1.htm">Picnic Grove 1 in Rock Creek Park</a></span><span class="c1">. &nbsp;There is a parking lot immediately adjacent to that picnic area, though walking and biking to Rock Creek Park are also good options. &nbsp;If you type Picnic Grove #1 into your GPS, you should be able to get directions to the parking lot. &nbsp;There are restrooms at the picnic area. &nbsp;</span></p>
       <p class="c9 c11"><span class="c1"></span></p>
       <h2>Traveling to DC</h2>
       <p class="c9 c11"><span class="c1"></span></p>
