--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <p class="c9"><span class="c1"></span></p>
       <h2>The Party</h2>
       <p class="c9"><span class="c1"></span></p>
-         <h3 class="c4 li-bullet-0"><span class="c7">When is the RSVP deadline?</span></h2>
+         <h3 class="c4 li-bullet-0"><span class="c7">How can I RSVP?</span></h2>
       <p class="c9"><span class="c1"></span></p>
-      <p class="c3"><span class="c1">Please RSVP by September 16. &nbsp;You can RSVP at this link if you prefer to RSVP online instead of by mail: &nbsp;</span><span class="c2"><a class="c0" href="https://forms.gle/StcLdKQCe2Rvz9gu8">https://forms.gle/StcLdKQCe2Rvz9gu8</a></span><span class="c1">. &nbsp;</span></p>
+      <p class="c3"><span class="c1">You can RSVP at this link if you prefer to RSVP online instead of by mail: &nbsp;</span><span class="c2"><a class="c0" href="https://forms.gle/StcLdKQCe2Rvz9gu8">https://forms.gle/StcLdKQCe2Rvz9gu8</a></span><span class="c1">. Please RSVP by September 16 if possible.</span></p>
       <p class="c9"><span class="c1"></span></p>
 	         <p class="c9"><span class="c1"></span></p>
          <h3 class="c4 li-bullet-0"><span class="c7">When are the wedding events?</span></h2>
